traces/bug_100.txt
examples++-load/isolineP1.cpp:617: error: DEAD_STORE
  The value written to &eT2 (type int) is never used.
Showing all 1 steps of the trace


examples++-load/isolineP1.cpp:617:7: Write of unused value
615.         int ii = 2*it1;
616.         int eT1 = taketriangle[ii];
617.         int eT2 = taketriangle[ii+1];   
             ^
618.         assert(eT1>=0);
619.         assert(eT2>=0);
